Add filters support and service logic. Deploy application to Heroku.
