# Code/Backend/src/main/resources/swagger/swagger.yaml
@@ -18,8 +18,6 @@ paths:
       tags: [Processor]
       operationId: getProcessors
       security: []
-      consumes:
-        - application/json
       parameters:
         - "$ref": "#/parameters/CpuVendorParameter"
         - "$ref": "#/parameters/CpuFamilyParameter"
@@ -34,13 +32,24 @@ paths:
         "400":
           description: Bad Request
 
+  "/processors/filters":
+    get:
+      tags: [Processor]
+      operationId: getProcessorFilters
+      security: []
+      responses:
+        "200":
+          description: OK
+          schema:
+            "$ref": "#/definitions/CentralProcessingUnitFiltersModel"
+        "400":
+          description: Bad Request
+
   "/motherboards":
     get:
       tags: [Motherboard]
       operationId: getMotherboards
       security: []
-      consumes:
-        - application/json
       parameters:
         - "$ref": "#/parameters/SupportedCpuSocketParameter"
         - "$ref": "#/parameters/MotherboardVendorParameter"
@@ -56,13 +65,24 @@ paths:
         "400":
           description: Bad Request
 
+  "/motherboard/filters":
+    get:
+      tags: [Motherboard]
+      operationId: getMotherboardFilters
+      security: []
+      responses:
+        "200":
+          description: OK
+          schema:
+            "$ref": "#/definitions/MotherboardFiltersModel"
+        "400":
+          description: Bad Request
+
   "/videocards":
     get:
       tags: [Videocard]
       operationId: getVideocards
       security: []
-      consumes:
-        - application/json
       parameters:
         - "$ref": "#/parameters/VideocardGpuVendorParameter"
         - "$ref": "#/parameters/VideocardVendorParameter"
@@ -73,6 +93,19 @@ paths:
             type: array
             items:
               "$ref": "#/definitions/VideocardModel"
+        "400":
+          description: Bad Request
+
+  "/videocards/filters":
+    get:
+      tags: [Videocard]
+      operationId: getVideocardFilters
+      security: []
+      responses:
+        "200":
+          description: OK
+          schema:
+            "$ref": "#/definitions/VideocardFiltersModel"
         "400":
           description: Bad Request
 
@@ -211,6 +244,50 @@ definitions:
         format: double
       imageURL:
         type: string
+
+  CentralProcessingUnitFiltersModel:
+    type: object
+    properties:
+      vendors:
+        type: array
+        items:
+          type: string
+      families:
+        type: array
+        items:
+          type: string
+      sockets:
+        type: array
+        items:
+          type: string
+
+  MotherboardFiltersModel:
+    type: object
+    properties:
+      vendors:
+        type: array
+        items:
+          type: string
+      chipsets:
+        type: array
+        items:
+          type: string
+      forms:
+        type: array
+        items:
+          type: string
+
+  VideocardFiltersModel:
+    type: object
+    properties:
+      gpuVendors:
+        type: array
+        items:
+          type: string
+      vendors:
+        type: array
+        items:
+          type: string
 
 parameters:
   CpuVendorParameter:
